# cfsem-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  katex-header.html
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
benches/: biotsavart.rs  circular_filament.rs
src/: lib.rs  math.rs  mesh.rs
src/physics/: biotsavart.rs  circular_filament.rs  gradshafranov.rs  linear_filament.rs  mod.rs
