[package]
name = "cfsem"
version = "1.0.0"
edition = "2021"
authors = ["Commonwealth Fusion Systems <jlogan@cfs.energy>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cfs-energy/cfsem-rs"
homepage = "https://github.com/cfs-energy/cfsem-rs"
description = "Quasi-steady electromagnetics including filamentized approximations, Biot-Savart, and Grad-Shafranov."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "^0.33.0"
rayon = "^1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true

[[bench]]
name = "biotsavart"
harness = false

[[bench]]
name = "circular_filament"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
